--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,8 @@ post_class: post-template
 			<!-- Post Featured Image -->
 			{% if page.image %}
             <figure>
-                <img class="featured-image img-fluid" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}" title="{{ page.title}}">
+                <div class="with-bg-size" style="background-image:url({{ site.baseurl }}/{{ page.image }});"></div>
+                <!--<img class="featured-image img-fluid" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}" title="{{ page.title}}">-->
                 <figcaption>{{ page.image_credit}}</figcaption>
             </figure>
             {% endif %}
