--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,7 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "syntax";
 
+$white-mode-primary: #5fba7d;
 .jumbotron {
   background-position-x: center;
   background-position-y: center;
@@ -21,4 +22,105 @@
   }
 }
 
+a {
+  color: $white-mode-primary;
+  &:hover {
+    color: $white-mode-primary;
+    text-decoration: underline;
+  }
+}
+
+
+figure{
+  .with-bg-size {
+    height: 200px;
+    background-position: center;
+    /* Make the background image cover the area of the <div>, and clip the excess */
+    background-size: cover;
+  }
+}
+figcaption{
+  font-style: italic;
+  margin-bottom: 1.5rem;
+  background-color: #f1f1f1;
+}
+
+$dark-mode-bg1: #000000;
+$dark-mode-bg2: #212121;
+$dark-mode-bg3: #303030;
+$dark-mode-bg4: #424242;
+$dark-mode-fg1: #ffffff;
+$dark-mode-fg2: #ffffffB3;
+$dark-mode-fg3: #ffffff80;
+$dark-mode-primary: #5fba7d;
+$dark-mode-secondary: #ff3f80;
 @import "dark-mode";
+
+/**
+Switch Dark/White Mode
+ */
+
+#switch-container {
+  position: fixed;
+  bottom: 20px;
+  right: 75px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 5px 18px;
+  border-radius: 50%;
+
+  .switch {
+    position: absolute;
+    margin-left: -9999px;
+    visibility: hidden;
+  }
+
+  .switch + label {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+  }
+
+  .switch--shadow + label {
+    padding: 2px;
+    width: 60px;
+    height: 30px;
+    background-color: #dddddd;
+    border-radius: 60px;
+  }
+
+  .switch--shadow + label:before,
+  .switch--shadow + label:after {
+    display: block;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    bottom: 1px;
+    content: "";
+  }
+  .switch--shadow + label:before {
+    right: 1px;
+    background-color: #f1f1f1;
+    border-radius: 60px;
+    transition: all 0.4s;
+  }
+  .switch--shadow + label:after {
+    width: 30px;
+    background-color: #333333;
+    border-radius: 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: all 0.4s;
+  }
+
+  .switch--shadow:checked + label:before {
+    background-color: #333333;
+  }
+  .switch--shadow:checked + label:after {
+    transform: translateX(30px);
+  }
+}
