--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -242,7 +242,7 @@ License: https://www.wowthemes.net/freebies-license/
      color:rgba(0,0,0,.8);
 }
  .article-post {
-     font-family:Merriweather;
+     /*font-family:Merriweather;*/
      font-size:1.2rem;
      line-height:1.8;
      color:rgba(0,0,0,.8);
