--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
-
     <title>{{ page.title }} | {{site.name}}</title>
-
     {% if page.description %}
     <meta name="description" content="{{ page.description }}">
     {% endif %}
     <meta name="theme-color" content="whiteMode">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -20,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Viga|Open+Sans" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
-
+    {% include favicon.html %}
 </head>
 
 {% if jekyll.environment == 'production' %}
@@ -44,12 +40,9 @@
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{ layout }}">
-
-
 <!-- Begin Menu Navigation
 ================================================== -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
-
     <div class="container pr-0">
 
         <!-- Begin Logo -->
@@ -85,28 +78,41 @@
                     <a class="nav-link" href="{{ site.baseurl }}/index.html"><i class="fas fa-home"></i> </a>
                 </li>
 
-                {% if page.url == "/about.html" %}
-                <li class="nav-item active">
-                    {% else %}
+                <!--{% if page.url == "/about.html" %}-->
+                <!--<li class="nav-item active">-->
+                <!--{% else %}-->
+                <!--<li class="nav-item">-->
+                <!--{% endif %}-->
+                <!--<a class="nav-link" href="{{ site.baseurl }}/about">Sobre</a>-->
+                <!--</li>-->
+                {% if site.facebook %}
                 <li class="nav-item">
-                    {% endif %}
-                    <a class="nav-link" href="{{ site.baseurl }}/about">Sobre</a>
+                    <a target="_blank" class="nav-link" href="{{ site.facebook }}">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
                 </li>
-
+                {% endif %}
+                {% if site.twitter %}
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://www.facebook.com/jrmessias/"><i
-                            class="fab fa-facebook-f"></i></a>
+                    <a target="_blank" class="nav-link" href="{{ site.twitter }}">
+                        <i class="fab fa-twitter"></i>
+                    </a>
                 </li>
-
+                {% endif %}
+                {% if site.github %}
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://twitter.com/jrmessias"><i
-                            class="fab fa-twitter"></i></a>
+                    <a target="_blank" class="nav-link" href="{{ site.github }}">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </li>
-
+                {% endif %}
+                {% if site.linkedin %}
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://github.com/jrmessias"><i
-                            class="fab fa-github"></i></a>
+                    <a target="_blank" class="nav-link" href="{{ site.linkedin }}">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </li>
+                {% endif %}
 
             </ul>
 
@@ -130,7 +136,6 @@
                 {{ site.description }}
             </p>
         </div>
-
 
         <!-- Content
         ================================================== -->
@@ -218,21 +223,15 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-
-<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
-
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
-
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 </body>
 </html>
