--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ post_class: post-template
 
 <!-- Begin Article
 ================================================== -->
+{% include post-seo.html %}
 <div class="container">
 	<div class="row">
 
