--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -20,7 +20,7 @@
                             <h2 class="card-title"><a class="" href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
                             <h4 class="card-text">{{ post.excerpt | strip_html | truncatewords:25 }}</h4>
                         </div>
-                        <div class="card-footer b-0 bg-white mt-auto">
+                        <div class="card-footer b-0 mt-auto">
                             <div class="wrapfooter">
                                 {% if post.author %}
                                 <span class="meta-footer-thumb">
