--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -12,7 +12,7 @@
             <h2 class="card-title"><a class="" href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
             <h4 class="card-text">{{ post.excerpt | strip_html | truncatewords:30 }}</h4>            
         </div>
-        <div class="card-footer bg-white">
+        <div class="card-footer">
             <div class="wrapfooter">
                 {% if post.author %}
                 <span class="meta-footer-thumb">
