--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -232,6 +232,6 @@
         crossorigin="anonymous"></script>
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
-<script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
+<script async id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 </body>
 </html>
