--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -230,6 +230,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+{% if page.url == "/" %}
+<script async src="https://unpkg.com/algoliasearch@3.30.0/dist/algoliasearch.min.js"></script>
+{% endif %}
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
 <script async id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
